src/objects/CustomObject11__c.object
<CustomObject>
    <description>インターブレインズ用案件</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>案件</relationshipLabel>
        <relationshipName>eWpN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <label>完了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>案件 (取引先責任者)</relationshipLabel>
        <relationshipName>S56E</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者(検索用)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>案件</relationshipLabel>
        <relationshipName>o5b8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>発行済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>フェーズ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>【ヨミ】受注確定/時期確定</fullName>
                </value>
                <value>
                    <fullName>【ヨミ】受注確定/時期未確定</fullName>
                </value>
                <value>
                    <fullName>【ヨミ】受注不確定/時期確定</fullName>
                </value>
                <value>
                    <fullName>【ヨミ】提案済/回答待</fullName>
                </value>
                <value>
                    <fullName>【伝票】１</fullName>
                </value>
                <value>
                    <fullName>【伝票】2</fullName>
                </value>
                <value>
                    <fullName>【伝票】3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SaleAmount__c</fullName>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ankennumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>案件№</label>
        <type>AutoNumber</type>
    </fields>
    <label>案件</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_CustomObject11</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>案件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>